--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,1 +1,41 @@
-% Referências
+@inproceedings{chourabi_2012,
+ author = {Chourabi, Hafedh and Nam, Taewoo and Walker, Shawn and Gil-Garcia, J. Ramon and Mellouli, Sehl and Nahon, Karine and Pardo, Theresa A. and Scholl, Hans Jochen},
+ title = {Understanding Smart Cities: An Integrative Framework},
+ booktitle = {Proceedings of the 2012 45th Hawaii International Conference on System Sciences},
+ series = {HICSS '12},
+ year = {2012},
+ isbn = {978-0-7695-4525-7},
+ pages = {2289--2297},
+ numpages = {9},
+ url = {http://dx.doi.org/10.1109/HICSS.2012.615},
+ doi = {10.1109/HICSS.2012.615},
+ acmid = {2117151},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+}
+
+@article{santana_2016,
+title={Software platforms for smart cities: Concepts, requirements, challenges, and a unified reference architecture},
+author={Santana, Eduardo F. Z. and Chaves, Ana Paula and Gerosa, Marco A. and Kon, Fabio and Milojicic, Dejan},
+journal={Accepted for publication in ACM Computing Surveys},
+year={2017}
+}
+
+@article{adrion_1982,
+ author = {Adrion, W. Richards and Branstad, Martha A. and Cherniavsky, John C.},
+ title = {Validation, Verification, and Testing of Computer Software},
+ journal = {ACM Comput. Surv.},
+ issue_date = {June 1982},
+ volume = {14},
+ number = {2},
+ month = jun,
+ year = {1982},
+ issn = {0360-0300},
+ pages = {159--192},
+ numpages = {34},
+ url = {http://doi.acm.org.ez67.periodicos.capes.gov.br/10.1145/356876.356879},
+ doi = {10.1145/356876.356879},
+ acmid = {356879},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
