--- a/quali.tex
+++ b/quali.tex
@@ -324,7 +324,7 @@
 % Bibliografia
 \backmatter \singlespacing   % espaçamento simples
 \bibliographystyle{templates/alpha-ime}% citação bibliográfica alpha
-%\bibliography{bibliografia}  % associado ao arquivo: 'bibliografia.bib'
+\bibliography{bibliografia}  % associado ao arquivo: 'bibliografia.bib'
 
 % ---------------------------------------------------------------------------- %
 % Índice remissivo
