first version of intoduction

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -39,3 +39,51 @@ year={2017}
  publisher = {ACM},
  address = {New York, NY, USA},
 }
+
+@article{sanchez_2014,
+title = "SmartSantander: IoT experimentation over a smart city testbed",
+journal = "Computer Networks",
+volume = "61",
+number = "Supplement C",
+pages = "217 - 238",
+year = "2014",
+note = "Special issue on Future Internet Testbeds - Part I",
+issn = "1389-1286",
+doi = "https://doi.org/10.1016/j.bjp.2013.12.020",
+url = "http://www.sciencedirect.com/science/article/pii/S1389128613004337",
+author = "Luis Sanchez and Luis Munoz and Jose Antonio Galache and Pablo Sotres and Juan R. Santana and Veronica Gutierrez and Rajiv Ramdhany and Alex Gluhak and Srdjan Krco and Evangelos Theodoridis and Dennis Pfisterer",
+keywords = "Internet of Things",
+keywords = "Experimentation",
+keywords = "Research",
+keywords = "Smart city",
+keywords = "Testbed"
+}
+
+@Inbook{wasserman_1990,
+author="Wasserman, Anthony I.",
+editor="Long, Fred",
+title="Tool integration in software engineering environments",
+bookTitle="Software Engineering Environments: International Workshop on Environments Chinon, France, September 18--20, 1989 Proceedings",
+year="1990",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="137--149",
+abstract="This paper has described the various types of tool integration with the goal of illustrating how diverse tools can be effectively integrated into CASE environments. Issues of data integration, control integration, and presentation integration may be viewed as orthogonal and defining a three-dimensional space in which tool integration occurs. The absence of standards has been shown to be a barrier to integration, as various tool developers remain unable to reach agreement on the appropriate point(s) in this space at which integration should occur. As a result, experience with tool integration has been largely at a tool-to-tool level, with little use of standard tool integration mechanisms.",
+isbn="978-3-540-46886-8",
+doi="10.1007/3-540-53452-0_38",
+url="https://doi.org/10.1007/3-540-53452-0_38"
+}
+
+@conference{arthur_17,
+author={Arthur de M. Del Esposte and Fabio Kon and Fabio M. Costa and Nelson Lago},
+title={InterSCity: A Scalable Microservice-based Open Source Platform for Smart Cities},
+booktitle={Proceedings of the 6th International Conference on Smart Cities and Green ICT Systems},
+year={2017},
+}
+
+@conference{santana_17,
+author={Eduardo F. Z. Santana and Nelson Lago and Fabio Kon and Dejan S. Milojicic},
+title={InterSCSimulator: Large-Scale Traffic Simulation in Smart Cities using Erlang},
+booktitle={Proceedings of the 18th Workshop on Multi-agent-based Simulation},
+year={2017},
+}
