--- a/quali.tex
+++ b/quali.tex
@@ -140,7 +140,7 @@
 \thispagestyle{empty}
 \begin{center}
     \vspace*{2.3cm}
-    \textbf{\Large{Geração de Cenários de Teste em Larga Escala para \\
+    \textbf{\Large{Teste em Larga Escala para \\
     Sistemas e Aplicações de Cidades Inteligentes}}\\
     
     \vspace*{1.2cm}
