fix introduction and start chapter 4

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -87,3 +87,80 @@ title={InterSCSimulator: Large-Scale Traffic Simulation in Smart Cities using Er
 booktitle={Proceedings of the 18th Workshop on Multi-agent-based Simulation},
 year={2017},
 }
+
+@article{neirotti_2014,
+title = "Current trends in Smart City initiatives: Some stylised facts",
+journal = "Cities",
+volume = "38",
+number = "Supplement C",
+pages = "25 - 36",
+year = "2014",
+issn = "0264-2751",
+doi = "https://doi.org/10.1016/j.cities.2013.12.010",
+url = "http://www.sciencedirect.com/science/article/pii/S0264275113001935",
+author = "Paolo Neirotti and Alberto De Marco and Anna Corinna Cagliano and Giulio Mangano and Francesco Scorrano",
+keywords = "Smart City",
+keywords = "Regression analysis",
+keywords = "Public policies",
+keywords = "Urban planning",
+keywords = "Information systems"
+}
+
+@article{mclaren_1992,
+  title={A real time digital simulator for testing relays},
+  author={McLaren, PG and Kuffel, R and Wierckx, R and Giesbrecht, J and Arendt, L},
+  journal={IEEE Transactions on Power Delivery},
+  volume={7},
+  number={1},
+  pages={207--213},
+  year={1992},
+  publisher={IEEE}
+}
+
+@article{mccown_1996,
+title = "APSIM: a novel software system for model development, model testing and simulation in agricultural systems research",
+journal = "Agricultural Systems",
+volume = "50",
+number = "3",
+pages = "255 - 271",
+year = "1996",
+issn = "0308-521X",
+doi = "https://doi.org/10.1016/0308-521X(94)00055-V",
+url = "http://www.sciencedirect.com/science/article/pii/0308521X9400055V",
+author = "R.L. McCown and G.L. Hammer and J.N.G. Hargreaves and D.P. Holzworth and D.M. Freebairn"
+}
+
+@article{dominguez_08,
+author = {Cesar Dominguez and Ignacio Anton and Gabriel Sala},
+journal = {Opt. Express},
+keywords = {Instrumentation, measurement, and metrology; Collimation; Solar energy},
+number = {19},
+pages = {14894--14901},
+publisher = {OSA},
+title = {Solar simulator for concentrator photovoltaic systems},
+volume = {16},
+month = {Sep},
+year = {2008},
+url = {http://www.opticsexpress.org/abstract.cfm?URI=oe-16-19-14894},
+doi = {10.1364/OE.16.014894},
+abstract = {A solar simulator for measuring performance of large area concentrator photovoltaic (CPV) modules is presented. Its illumination system is based on a Xenon flash light and a large area collimator mirror, which simulates natural sun light. Quality requirements imposed by the CPV systems have been characterized: irradiance level and uniformity at the receiver, light collimation and spectral distribution. The simulator allows indoor fast and cost-effective performance characterization and classification of CPV systems at the production line as well as module rating carried out by laboratories.},
+}
+
+@article{walker_1998,
+title = "The Tourism Futures Simulator: a systems thinking approach",
+journal = "Environmental Modelling E Software",
+volume = "14",
+number = "1",
+pages = "59 - 67",
+year = "1998",
+issn = "1364-8152",
+doi = "https://doi.org/10.1016/S1364-8152(98)00033-4",
+url = "http://www.sciencedirect.com/science/article/pii/S1364815298000334",
+author = "Paul A. Walker and R. Greiner and D. McDonald and V. Lyne",
+keywords = "Tourism",
+keywords = "Simulation model",
+keywords = "Systems thinking",
+keywords = "Economics",
+keywords = "Environment",
+keywords = "Mental models"
+}
