--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -164,3 +164,45 @@ keywords = "Economics",
 keywords = "Environment",
 keywords = "Mental models"
 }
+
+@unknown{teste_de_software,
+author = {Do, Simone and Souza, Simone and Maldonado, Jose and Camargo Pinto, Sandra and Fabbri, Ferraz and Auri, Marcelo and Vincenzi, Auri and Barbosa, Ellen and Delamaro, Marcio and Jino, Mario},
+year = {2000},
+month = {11},
+pages = {1-40},
+title = {INTRODUCAO AO TESTE DE SOFTWARE}
+}
+
+@Inbook{fagan_2002,
+author="Fagan, Michael",
+editor="Broy, Manfred
+and Denert, Ernst",
+title="Design and Code Inspections to Reduce Errors in Program Development",
+bookTitle="Software Pioneers: Contributions to Software Engineering",
+year="2002",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="575--607",
+abstract="Substantial net improvements in programming quality and productivity have been obtained through the use of formal inspections of design and of code. Improvements are made possible by a systematic and efficient design and code verification process, with well-defined roles for inspection participants. The manner in which inspection data is categorized and made suitable for process analysis is an important factor in attaining the improvements. It is shown that by using inspection results, a mechanism for initial error reduction followed by ever-improving error rates can be achieved.",
+isbn="978-3-642-59412-0",
+doi="10.1007/978-3-642-59412-0_35",
+url="https://doi.org/10.1007/978-3-642-59412-0_35"
+}
+
+@book{pressman_2009,
+  title={Engenharia de Software - 7.ed.: },
+  author={Pressman, R.S.},
+  isbn={9788580550443},
+  url={https://books.google.com.br/books?id=y0rH9wuXe68C},
+  year={2009},
+  publisher={McGraw Hill Brasil}
+}
+
+@book{sommerville_2011,
+  title={Engenharia de software},
+  author={Sommerville, I.},
+  isbn={9788579361081},
+  url={https://books.google.com.br/books?id=H4u5ygAACAAJ},
+  year={2011},
+  publisher={PEARSON BRASIL}
+}
