initial version of chapter 2

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -206,3 +206,55 @@ url="https://doi.org/10.1007/978-3-642-59412-0_35"
   year={2011},
   publisher={PEARSON BRASIL}
 }
+
+@misc{bukh_1992,
+  title={The art of computer systems performance analysis, techniques for experimental design, measurement, simulation and modeling},
+  author={Bukh, Per Nikolaj D},
+  year={1992},
+  publisher={JSTOR}
+}
+
+@article{goodwin_1987,
+  title={Functionality and usability},
+  author={Goodwin, Nancy C},
+  journal={Communications of the ACM},
+  volume={30},
+  number={3},
+  pages={229--233},
+  year={1987},
+  publisher={ACM}
+}
+
+@book{nielsen_1994,
+  title={Usability engineering},
+  author={Nielsen, Jakob},
+  year={1994},
+  publisher={Elsevier}
+}
+
+@article{shneiderman_1991,
+  title={Human values and the future of technology: a declaration of responsibility},
+  author={Shneiderman, Ben},
+  journal={ACM SIGCHI Bulletin},
+  volume={23},
+  number={1},
+  pages={11--16},
+  year={1991},
+  publisher={ACM}
+}
+
+@book{shneidermaan_2016,
+  title={Designing the user interface: strategies for effective human-computer interaction},
+  author={Shneiderman, Ben and Plaisant, Catherine and Cohen, Maxine S and Jacobs, Steven and Elmqvist, Niklas and Diakopoulos, Nicholas},
+  year={2016},
+  publisher={Pearson}
+}
+
+@article{hoxmeier_2000,
+  title={System response time and user satisfaction: An experimental study of browser-based applications},
+  author={Hoxmeier, John A and DiCesare, Chris},
+  journal={AMCIS 2000 Proceedings},
+  pages={347},
+  year={2000}
+}
+
