adding more info about amqp

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -258,3 +258,13 @@ url="https://doi.org/10.1007/978-3-642-59412-0_35"
   year={2000}
 }
 
+@article{vinoski_2006,
+  title={Advanced message queuing protocol},
+  author={Vinoski, Steve},
+  journal={IEEE Internet Computing},
+  volume={10},
+  number={6},
+  year={2006},
+  publisher={IEEE}
+}
+
