chapter 3: initial version of first section

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -268,3 +268,69 @@ url="https://doi.org/10.1007/978-3-642-59412-0_35"
   publisher={IEEE}
 }
 
+@inproceedings{galache_2012,
+  title={Towards experimentation-service duality within a smart city scenario},
+  author={Galache, Jose A and Santana, Juan R and Guti{\'e}rrez, Ver{\'o}nica and S{\'a}nchez, Luis and Sotres, Pablo and Mu{\~n}oz, Luis},
+  booktitle={Wireless On-demand Network Systems and Services (WONS), 2012 9th Annual Conference on},
+  pages={175--181},
+  year={2012},
+  organization={IEEE}
+}
+
+@inproceedings{nati_2013,
+  title={Smartcampus: A user-centric testbed for internet of things experimentation},
+  author={Nati, Michele and Gluhak, Alexander and Abangar, Hamidreza and Headley, William},
+  booktitle={Wireless Personal Multimedia Communications (WPMC), 2013 16th International Symposium on},
+  pages={1--6},
+  year={2013},
+  organization={IEEE}
+}
+
+@inproceedings{olivares_2013,
+  title={An experimental testbed for smart cities applications},
+  author={Olivares, Teresa and Royo, Fernando and Ortiz, Antonio M},
+  booktitle={Proceedings of the 11th ACM international symposium on Mobility management and wireless access},
+  pages={115--118},
+  year={2013},
+  organization={ACM}
+}
+
+@inproceedings{mwangama_2013,
+  title={Testbeds for reliable smart city machine-to-machine communication},
+  author={Mwangama, Joyce and Willner, Alexander and Ventura, Neco and Elmangoush, Asma and Pfeifer, Tom and Magedanz, Thomas},
+  booktitle={Southern African Telecommunication Networks and Applications Conference (SATNAC)},
+  pages={339},
+  year={2013}
+}
+
+@inproceedings{adjih_2015,
+  title={FIT IoT-LAB: A large scale open experimental IoT testbed},
+  author={Adjih, Cedric and Baccelli, Emmanuel and Fleury, Eric and Harter, Gaetan and Mitton, Nathalie and Noel, Thomas and Pissard-Gibollet, Roger and Saint-Marcel, Frederic and Schreiner, Guillaume and Vandaele, Julien and others},
+  booktitle={Internet of Things (WF-IoT), 2015 IEEE 2nd World Forum on},
+  pages={459--464},
+  year={2015},
+  organization={IEEE}
+}
+
+@inproceedings{shukla_2016,
+  title={Benchmarking distributed stream processing platforms for iot applications},
+  author={Shukla, Anshu and Simmhan, Yogesh},
+  booktitle={Technology Conference on Performance Evaluation and Benchmarking},
+  pages={90--106},
+  year={2016},
+  organization={Springer}
+}
+
+@article{shukla_2017,
+  title={RIoTBench: A Real-time IoT Benchmark for Distributed Stream Processing Platforms},
+  author={Shukla, Anshu and Chaturvedi, Shilpa and Simmhan, Yogesh},
+  journal={arXiv preprint arXiv:1701.08530},
+  year={2017}
+}
+
+@article{zyrianoff_2017,
+  title={SenSE--Sensor Simulation Environment: Uma ferramenta para gera{\c{c}}{\~a}o de tr{\'a}fego IoT em larga escala},
+  author={Zyrianoff, Ivan and Borelli, Fabrizio and Kamienski, Carlos},
+  year={2017}
+}
+
