initial version of chapter 3

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -334,3 +334,60 @@ url="https://doi.org/10.1007/978-3-642-59412-0_35"
   year={2017}
 }
 
+@inproceedings{karnouskos_2009,
+  title={Simulation of a smart grid city with software agents},
+  author={Karnouskos, Stamatis and De Holanda, Thiago Nass},
+  booktitle={Computer Modeling and Simulation, 2009. EMS'09. Third UKSim European Symposium on},
+  pages={424--429},
+  year={2009},
+  organization={IEEE}
+}
+
+@article{kim_2009,
+  title={Realistic mobility simulation of urban mesh networks},
+  author={Kim, Jonghyun and Sridhara, Vinay and Bohacek, Stephan},
+  journal={Ad Hoc Networks},
+  volume={7},
+  number={2},
+  pages={411--430},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@inproceedings{saha_2004,
+  title={Modeling mobility for vehicular ad-hoc networks},
+  author={Saha, Amit Kumar and Johnson, David B},
+  booktitle={Proceedings of the 1st ACM international workshop on Vehicular ad hoc networks},
+  pages={91--92},
+  year={2004},
+  organization={ACM}
+}
+
+@inproceedings{barba_2012,
+  title={Smart city for VANETs using warning messages, traffic statistics and intelligent traffic lights},
+  author={Barba, Carolina Tripp and Mateos, Miguel Angel and Soto, Pablo Reganas and Mezher, Ahmad Mohamad and Igartua, M{\'o}nica Aguilar},
+  booktitle={Intelligent Vehicles Symposium (IV), 2012 IEEE},
+  pages={902--907},
+  year={2012},
+  organization={IEEE}
+}
+
+@article{waraich_2013,
+  title={Plug-in hybrid electric vehicles and smart grids: Investigations based on a microsimulation},
+  author={Waraich, Rashid A and Galus, Matthias D and Dobler, Christoph and Balmer, Michael and Andersson, G{\"o}ran and Axhausen, Kay W},
+  journal={Transportation Research Part C: Emerging Technologies},
+  volume={28},
+  pages={74--86},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@inproceedings{wegener_2008,
+  title={TraCI: an interface for coupling road traffic and network simulators},
+  author={Wegener, Axel and Pi{\'o}rkowski, Micha{\l} and Raya, Maxim and Hellbr{\"u}ck, Horst and Fischer, Stefan and Hubaux, Jean-Pierre},
+  booktitle={Proceedings of the 11th communications and networking simulation symposium},
+  pages={155--163},
+  year={2008},
+  organization={ACM}
+}
+
