--- a/quali.tex
+++ b/quali.tex
@@ -11,6 +11,7 @@
 
 % ---------------------------------------------------------------------------- %
 % Pacotes 
+%\usepackage[table,xcdraw]{xcolor}
 \usepackage[T1]{fontenc}
 \usepackage[brazil]{babel}
 \usepackage[latin1]{inputenc}
