adopt more suggestions made by Eduardo

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -391,3 +391,16 @@ url="https://doi.org/10.1007/978-3-642-59412-0_35"
   organization={ACM}
 }
 
+@article{kim_2012,
+title = "Seoul",
+journal = "Cities",
+volume = "29",
+number = "2",
+pages = "142 - 154",
+year = "2012",
+issn = "0264-2751",
+doi = "https://doi.org/10.1016/j.cities.2011.02.003",
+url = "http://www.sciencedirect.com/science/article/pii/S0264275111000199",
+author = "Hyung Min Kim and Sun Sheng Han",
+keywords = "Urban history, Economic development, Housing, Planning policies, Metropolitan governance"
+}
