--- a/quali.tex
+++ b/quali.tex
@@ -21,7 +21,7 @@
 \usepackage{makeidx}                    % índice remissivo
 \usepackage[nottoc]{tocbibind}          % acrescentamos a bibliografia/indice/conteudo no Table of Contents
 \usepackage{courier}                    % usa o Adobe Courier no lugar de Computer Modern Typewriter
-\usepackage{type1cm}                    % fontes realmente escaláveis
+\usepackage{lmodern}
 \usepackage{listings}                   % para formatar código-fonte (ex. em Java)
 \usepackage{titletoc}
 %\usepackage[bf,small,compact]{titlesec} % cabeçalhos dos títulos: menores e compactos
@@ -33,7 +33,7 @@
 \usepackage[pdftex,plainpages=false,pdfpagelabels,pagebackref,colorlinks=true,citecolor=DarkGreen,linkcolor=NavyBlue,urlcolor=DarkRed,filecolor=green,bookmarksopen=true]{hyperref} % links coloridos
 \usepackage[all]{hypcap}                % soluciona o problema com o hyperref e capitulos
 \usepackage[square,sort,nonamebreak,comma]{templates/natbib}  % citação bibliográfica alpha (alpha-ime.bst)
-\fontsize{60}{62}\usefont{OT1}{cmr}{m}{n}{\selectfont}
+\fontsize{60}{62}\usefont{T1}{cmr}{m}{n}{\selectfont}
 
 % ---------------------------------------------------------------------------- %
 % tikz
