--- a/TODO
+++ b/TODO
@@ -4,3 +4,5 @@ Referencias:
 - Was90 (não cita o lugar em que foi publicado)
 - "Modeling E Simulation" -> &
 - Citar livros importantes em inglês e não em português
+
+Jounal para publicação - Simulation Modelling Practice and Theory
