more fixes based on Fabio's correction

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -59,19 +59,13 @@ keywords = "Smart city",
 keywords = "Testbed"
 }
 
-@Inbook{wasserman_1990,
-author="Wasserman, Anthony I.",
-editor="Long, Fred",
-title="Tool integration in software engineering environments",
-bookTitle="Software Engineering Environments: International Workshop on Environments Chinon, France, September 18--20, 1989 Proceedings",
-year="1990",
-publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
-pages="137--149",
-abstract="This paper has described the various types of tool integration with the goal of illustrating how diverse tools can be effectively integrated into CASE environments. Issues of data integration, control integration, and presentation integration may be viewed as orthogonal and defining a three-dimensional space in which tool integration occurs. The absence of standards has been shown to be a barrier to integration, as various tool developers remain unable to reach agreement on the appropriate point(s) in this space at which integration should occur. As a result, experience with tool integration has been largely at a tool-to-tool level, with little use of standard tool integration mechanisms.",
-isbn="978-3-540-46886-8",
-doi="10.1007/3-540-53452-0_38",
-url="https://doi.org/10.1007/3-540-53452-0_38"
+@inproceedings{wasserman_1990,
+  title={Tool integration in software engineering environments},
+  author={Wasserman, Anthony I},
+  booktitle={Software Engineering Environments},
+  pages={137--149},
+  year={1990},
+  organization={Springer}
 }
 
 @conference{arthur_17,
@@ -148,7 +142,7 @@ abstract = {A solar simulator for measuring performance of large area concentrat
 
 @article{walker_1998,
 title = "The Tourism Futures Simulator: a systems thinking approach",
-journal = "Environmental Modelling E Software",
+journal = "Environmental Modelling and Software",
 volume = "14",
 number = "1",
 pages = "59 - 67",
@@ -165,28 +159,21 @@ keywords = "Environment",
 keywords = "Mental models"
 }
 
-@unknown{teste_de_software,
+@book{teste_de_software,
 author = {Do, Simone and Souza, Simone and Maldonado, Jose and Camargo Pinto, Sandra and Fabbri, Ferraz and Auri, Marcelo and Vincenzi, Auri and Barbosa, Ellen and Delamaro, Marcio and Jino, Mario},
 year = {2000},
 month = {11},
-pages = {1-40},
-title = {INTRODUCAO AO TESTE DE SOFTWARE}
+title = {Introducao ao Teste de Software},
+publisher={Elsevier Brasil}
 }
 
-@Inbook{fagan_2002,
-author="Fagan, Michael",
-editor="Broy, Manfred
-and Denert, Ernst",
-title="Design and Code Inspections to Reduce Errors in Program Development",
-bookTitle="Software Pioneers: Contributions to Software Engineering",
-year="2002",
-publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
-pages="575--607",
-abstract="Substantial net improvements in programming quality and productivity have been obtained through the use of formal inspections of design and of code. Improvements are made possible by a systematic and efficient design and code verification process, with well-defined roles for inspection participants. The manner in which inspection data is categorized and made suitable for process analysis is an important factor in attaining the improvements. It is shown that by using inspection results, a mechanism for initial error reduction followed by ever-improving error rates can be achieved.",
-isbn="978-3-642-59412-0",
-doi="10.1007/978-3-642-59412-0_35",
-url="https://doi.org/10.1007/978-3-642-59412-0_35"
+@incollection{fagan_2002,
+  title={Design and code inspections to reduce errors in program development},
+  author={Fagan, Michael},
+  booktitle={Software pioneers},
+  pages={575--607},
+  year={2002},
+  publisher={Springer}
 }
 
 @book{pressman_2009,
@@ -328,9 +315,10 @@ url="https://doi.org/10.1007/978-3-642-59412-0_35"
   year={2017}
 }
 
-@article{zyrianoff_2017,
+@conference{zyrianoff_2017,
   title={SenSE--Sensor Simulation Environment: Uma ferramenta para gera{\c{c}}{\~a}o de tr{\'a}fego IoT em larga escala},
   author={Zyrianoff, Ivan and Borelli, Fabrizio and Kamienski, Carlos},
+  booktitle={35th Simposio Brasileiro de Redes de Computadores e Sistemas Distribuidos},
   year={2017}
 }
 
