fix bibtex file

--- a/quali.tex
+++ b/quali.tex
@@ -350,8 +350,7 @@
 \backmatter \singlespacing   % espaçamento simples
 \bibliographystyle{templates/alpha-ime}% citação bibliográfica alpha
 \inputencoding{latin1}
-\bibliography{bibliografia_bibertool}  % associado ao arquivo: 'bibliografia.bib'
-%\bibliography{bibliografia}  % associado ao arquivo: 'bibliografia.bib'
+\bibliography{bibliografia}  % associado ao arquivo: 'bibliografia.bib'
 
 % ---------------------------------------------------------------------------- %
 % Índice remissivo
