--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,17 +1,15 @@
-@inproceedings{chourabi_2012,
- author = {Chourabi, Hafedh and Nam, Taewoo and Walker, Shawn and Gil-Garcia, J. Ramon and Mellouli, Sehl and Nahon, Karine and Pardo, Theresa A. and Scholl, Hans Jochen},
- title = {Understanding Smart Cities: An Integrative Framework},
- booktitle = {Proceedings of the 2012 45th Hawaii International Conference on System Sciences},
- series = {HICSS '12},
- year = {2012},
- isbn = {978-0-7695-4525-7},
- pages = {2289--2297},
- numpages = {9},
- url = {http://dx.doi.org/10.1109/HICSS.2012.615},
- doi = {10.1109/HICSS.2012.615},
- acmid = {2117151},
- publisher = {IEEE Computer Society},
- address = {Washington, DC, USA},
+@INPROCEEDINGS{chourabi_2012,
+  AUTHOR = {Chourabi, Hafedh and Nam, Taewoo and Walker, Shawn and Gil-Garcia, J. Ramon and Mellouli, Sehl and Nahon, Karine and Pardo, Theresa A. and Scholl, Hans Jochen},
+  LOCATION = {Washington, DC, USA},
+  PUBLISHER = {IEEE Computer Society},
+  URL = {http://dx.doi.org/10.1109/HICSS.2012.615},
+  BOOKTITLE = {Proceedings of the 2012 45th Hawaii International Conference on System Sciences},
+  DATE = {2012},
+  DOI = {10.1109/HICSS.2012.615},
+  ISBN = {978-0-7695-4525-7},
+  PAGES = {2289--2297},
+  SERIES = {HICSS '12},
+  TITLE = {Understanding Smart Cities: An Integrative Framework},
 }
 
 @article{santana_2016,
@@ -22,82 +20,57 @@ year={2017}
 }
 
 @article{adrion_1982,
- author = {Adrion, W. Richards and Branstad, Martha A. and Cherniavsky, John C.},
- title = {Validation, Verification, and Testing of Computer Software},
- journal = {ACM Comput. Surv.},
- issue_date = {June 1982},
- volume = {14},
- number = {2},
- month = jun,
- year = {1982},
- issn = {0360-0300},
- pages = {159--192},
- numpages = {34},
- url = {http://doi.acm.org.ez67.periodicos.capes.gov.br/10.1145/356876.356879},
- doi = {10.1145/356876.356879},
- acmid = {356879},
- publisher = {ACM},
- address = {New York, NY, USA},
+  title={Validation, verification, and testing of computer software},
+  author={Adrion, W Richards and Branstad, Martha A and Cherniavsky, John C},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={14},
+  number={2},
+  pages={159--192},
+  year={1982},
+  publisher={ACM}
 }
 
 @article{sanchez_2014,
-title = "SmartSantander: IoT experimentation over a smart city testbed",
-journal = "Computer Networks",
-volume = "61",
-number = "Supplement C",
-pages = "217 - 238",
-year = "2014",
-note = "Special issue on Future Internet Testbeds - Part I",
-issn = "1389-1286",
-doi = "https://doi.org/10.1016/j.bjp.2013.12.020",
-url = "http://www.sciencedirect.com/science/article/pii/S1389128613004337",
-author = "Luis Sanchez and Luis Munoz and Jose Antonio Galache and Pablo Sotres and Juan R. Santana and Veronica Gutierrez and Rajiv Ramdhany and Alex Gluhak and Srdjan Krco and Evangelos Theodoridis and Dennis Pfisterer",
-keywords = "Internet of Things",
-keywords = "Experimentation",
-keywords = "Research",
-keywords = "Smart city",
-keywords = "Testbed"
+  title={SmartSantander: IoT experimentation over a smart city testbed},
+  author={Sanchez, Luis and Mu{\~n}oz, Luis and Galache, Jose Antonio and Sotres, Pablo and Santana, Juan R and Gutierrez, Veronica and Ramdhany, Rajiv and Gluhak, Alex and Krco, Srdjan and Theodoridis, Evangelos and others},
+  journal={Computer Networks},
+  volume={61},
+  pages={217--238},
+  year={2014},
+  publisher={Elsevier}
 }
 
-@inproceedings{wasserman_1990,
-  title={Tool integration in software engineering environments},
-  author={Wasserman, Anthony I},
-  booktitle={Software Engineering Environments},
-  pages={137--149},
-  year={1990},
-  organization={Springer}
+@INPROCEEDINGS{wasserman_1990,
+  AUTHOR = {Wasserman, Anthony I},
+  ORGANIZATION = {Springer},
+  BOOKTITLE = {Software Engineering Environments},
+  DATE = {1990},
+  PAGES = {137--149},
+  TITLE = {Tool integration in software engineering environments},
 }
 
-@conference{arthur_17,
-author={Arthur de M. Del Esposte and Fabio Kon and Fabio M. Costa and Nelson Lago},
-title={InterSCity: A Scalable Microservice-based Open Source Platform for Smart Cities},
-booktitle={Proceedings of the 6th International Conference on Smart Cities and Green ICT Systems},
-year={2017},
+@INPROCEEDINGS{arthur_17,
+  AUTHOR = {de M. Del Esposte, Arthur and Kon, Fabio and Costa, Fabio M. and Lago, Nelson},
+  BOOKTITLE = {Proceedings of the 6th International Conference on Smart Cities and Green ICT Systems},
+  DATE = {2017},
+  TITLE = {InterSCity: A Scalable Microservice-based Open Source Platform for Smart Cities},
 }
 
-@conference{santana_17,
-author={Eduardo F. Z. Santana and Nelson Lago and Fabio Kon and Dejan S. Milojicic},
-title={InterSCSimulator: Large-Scale Traffic Simulation in Smart Cities using Erlang},
-booktitle={Proceedings of the 18th Workshop on Multi-agent-based Simulation},
-year={2017},
+@INPROCEEDINGS{santana_17,
+  AUTHOR = {Santana, Eduardo F. Z. and Lago, Nelson and Kon, Fabio and Milojicic, Dejan S.},
+  BOOKTITLE = {Proceedings of the 18th Workshop on Multi-agent-based Simulation},
+  DATE = {2017},
+  TITLE = {InterSCSimulator: Large-Scale Traffic Simulation in Smart Cities using Erlang},
 }
 
 @article{neirotti_2014,
-title = "Current trends in Smart City initiatives: Some stylised facts",
-journal = "Cities",
-volume = "38",
-number = "Supplement C",
-pages = "25 - 36",
-year = "2014",
-issn = "0264-2751",
-doi = "https://doi.org/10.1016/j.cities.2013.12.010",
-url = "http://www.sciencedirect.com/science/article/pii/S0264275113001935",
-author = "Paolo Neirotti and Alberto De Marco and Anna Corinna Cagliano and Giulio Mangano and Francesco Scorrano",
-keywords = "Smart City",
-keywords = "Regression analysis",
-keywords = "Public policies",
-keywords = "Urban planning",
-keywords = "Information systems"
+  title={Current trends in Smart City initiatives: Some stylised facts},
+  author={Neirotti, Paolo and De Marco, Alberto and Cagliano, Anna Corinna and Mangano, Giulio and Scorrano, Francesco},
+  journal={Cities},
+  volume={38},
+  pages={25--36},
+  year={2014},
+  publisher={Elsevier}
 }
 
 @article{mclaren_1992,
@@ -112,93 +85,85 @@ keywords = "Information systems"
 }
 
 @article{mccown_1996,
-title = "APSIM: a novel software system for model development, model testing and simulation in agricultural systems research",
-journal = "Agricultural Systems",
-volume = "50",
-number = "3",
-pages = "255 - 271",
-year = "1996",
-issn = "0308-521X",
-doi = "https://doi.org/10.1016/0308-521X(94)00055-V",
-url = "http://www.sciencedirect.com/science/article/pii/0308521X9400055V",
-author = "R.L. McCown and G.L. Hammer and J.N.G. Hargreaves and D.P. Holzworth and D.M. Freebairn"
+  title={APSIM: a novel software system for model development, model testing and simulation in agricultural systems research},
+  author={McCown, RL and Hammer, GL and Hargreaves, JNG and Holzworth, DP and Freebairn, DM},
+  journal={Agricultural systems},
+  volume={50},
+  number={3},
+  pages={255--271},
+  year={1996},
+  publisher={Elsevier}
 }
 
 @article{dominguez_08,
-author = {Cesar Dominguez and Ignacio Anton and Gabriel Sala},
-journal = {Opt. Express},
-keywords = {Instrumentation, measurement, and metrology; Collimation; Solar energy},
-number = {19},
-pages = {14894--14901},
-publisher = {OSA},
-title = {Solar simulator for concentrator photovoltaic systems},
-volume = {16},
-month = {Sep},
-year = {2008},
-url = {http://www.opticsexpress.org/abstract.cfm?URI=oe-16-19-14894},
-doi = {10.1364/OE.16.014894},
-abstract = {A solar simulator for measuring performance of large area concentrator photovoltaic (CPV) modules is presented. Its illumination system is based on a Xenon flash light and a large area collimator mirror, which simulates natural sun light. Quality requirements imposed by the CPV systems have been characterized: irradiance level and uniformity at the receiver, light collimation and spectral distribution. The simulator allows indoor fast and cost-effective performance characterization and classification of CPV systems at the production line as well as module rating carried out by laboratories.},
+  title={Solar simulator for concentrator photovoltaic systems},
+  author={Dom{\'\i}nguez, C{\'e}sar and Ant{\'o}n, Ignacio and Sala, Gabriel},
+  journal={Optics express},
+  volume={16},
+  number={19},
+  pages={14894--14901},
+  year={2008},
+  publisher={Optical Society of America}
 }
 
 @article{walker_1998,
-title = "The Tourism Futures Simulator: a systems thinking approach",
-journal = "Environmental Modelling and Software",
-volume = "14",
-number = "1",
-pages = "59 - 67",
-year = "1998",
-issn = "1364-8152",
-doi = "https://doi.org/10.1016/S1364-8152(98)00033-4",
-url = "http://www.sciencedirect.com/science/article/pii/S1364815298000334",
-author = "Paul A. Walker and R. Greiner and D. McDonald and V. Lyne",
-keywords = "Tourism",
-keywords = "Simulation model",
-keywords = "Systems thinking",
-keywords = "Economics",
-keywords = "Environment",
-keywords = "Mental models"
+  title={The Tourism Futures Simulator: a systems thinking approach},
+  author={Walker, Paul A and Greiner, Richard and McDonald, David and Lyne, Victoria},
+  journal={Environmental Modelling \& Software},
+  volume={14},
+  number={1},
+  pages={59--67},
+  year={1998},
+  publisher={Elsevier}
 }
 
-@book{teste_de_software,
-author = {Do, Simone and Souza, Simone and Maldonado, Jose and Camargo Pinto, Sandra and Fabbri, Ferraz and Auri, Marcelo and Vincenzi, Auri and Barbosa, Ellen and Delamaro, Marcio and Jino, Mario},
-year = {2000},
-month = {11},
-title = {Introducao ao Teste de Software},
-publisher={Elsevier Brasil}
+@BOOK{teste_de_software,
+  AUTHOR = {Do, Simone and Souza, Simone and Maldonado, Jose and Camargo Pinto, Sandra and Fabbri, Ferraz and Auri, Marcelo and Vincenzi, Auri and Barbosa, Ellen and Delamaro, Marcio and Jino, Mario},
+  PUBLISHER = {Elsevier Brasil},
+  DATE = {2000-11},
+  TITLE = {Introdução ao Teste de Software},
 }
 
-@incollection{fagan_2002,
-  title={Design and code inspections to reduce errors in program development},
-  author={Fagan, Michael},
-  booktitle={Software pioneers},
-  pages={575--607},
-  year={2002},
-  publisher={Springer}
+@INCOLLECTION{fagan_2002,
+  AUTHOR = {Fagan, Michael},
+  PUBLISHER = {Springer},
+  BOOKTITLE = {Software pioneers},
+  DATE = {2002},
+  PAGES = {575--607},
+  TITLE = {Design and code inspections to reduce errors in program development},
 }
 
-@book{pressman_2009,
-  title={Engenharia de Software - 7.ed.: },
-  author={Pressman, R.S.},
-  isbn={9788580550443},
-  url={https://books.google.com.br/books?id=y0rH9wuXe68C},
-  year={2009},
-  publisher={McGraw Hill Brasil}
+@BOOK{pressman_2009,
+  AUTHOR = {Pressman, R.S.},
+  PUBLISHER = {McGraw Hill Brasil},
+  URL = {https://books.google.com.br/books?id=y0rH9wuXe68C},
+  DATE = {2009},
+  ISBN = {9788580550443},
+  TITLE = {Engenharia de Software - 7.ed.:},
 }
 
-@book{sommerville_2011,
-  title={Engenharia de software},
-  author={Sommerville, I.},
-  isbn={9788579361081},
-  url={https://books.google.com.br/books?id=H4u5ygAACAAJ},
-  year={2011},
-  publisher={PEARSON BRASIL}
+@BOOK{sommerville_2011,
+  AUTHOR = {Sommerville, I.},
+  PUBLISHER = {Pearson Brasil},
+  URL = {https://books.google.com.br/books?id=H4u5ygAACAAJ},
+  DATE = {2011},
+  ISBN = {9788579361081},
+  TITLE = {Engenharia de software},
 }
 
-@misc{bukh_1992,
-  title={The art of computer systems performance analysis, techniques for experimental design, measurement, simulation and modeling},
-  author={Bukh, Per Nikolaj D},
-  year={1992},
-  publisher={JSTOR}
+@article{bukh_1992,
+ ISSN = {00922102, 1526551X},
+ URL = {http://www.jstor.org/stable/25061650},
+ author = {Per Nikolaj D. Bukh},
+ journal = {Interfaces},
+ number = {4},
+ pages = {113-115},
+ publisher = {INFORMS},
+ reviewed-author = {Raj Jain},
+ volume = {22},
+ title = {The art of computer systems performance analysis, techniques for experimental design, measurement, simulation and modeling},
+ publisher = {JSTOR},
+ year = {1992}
 }
 
 @article{goodwin_1987,
@@ -212,11 +177,11 @@ publisher={Elsevier Brasil}
   publisher={ACM}
 }
 
-@book{nielsen_1994,
-  title={Usability engineering},
-  author={Nielsen, Jakob},
-  year={1994},
-  publisher={Elsevier}
+@BOOK{nielsen_1994,
+  AUTHOR = {Nielsen, Jakob},
+  PUBLISHER = {Elsevier},
+  DATE = {1994},
+  TITLE = {Usability engineering},
 }
 
 @article{shneiderman_1991,
@@ -230,11 +195,11 @@ publisher={Elsevier Brasil}
   publisher={ACM}
 }
 
-@book{shneidermaan_2016,
-  title={Designing the user interface: strategies for effective human-computer interaction},
-  author={Shneiderman, Ben and Plaisant, Catherine and Cohen, Maxine S and Jacobs, Steven and Elmqvist, Niklas and Diakopoulos, Nicholas},
-  year={2016},
-  publisher={Pearson}
+@BOOK{shneidermaan_2016,
+  AUTHOR = {Shneiderman, Ben and Plaisant, Catherine and Cohen, Maxine S and Jacobs, Steven and Elmqvist, Niklas and Diakopoulos, Nicholas},
+  PUBLISHER = {Pearson},
+  DATE = {2016},
+  TITLE = {Designing the user interface: strategies for effective human-computer interaction},
 }
 
 @article{hoxmeier_2000,
@@ -255,80 +220,90 @@ publisher={Elsevier Brasil}
   publisher={IEEE}
 }
 
-@inproceedings{galache_2012,
-  title={Towards experimentation-service duality within a smart city scenario},
-  author={Galache, Jose A and Santana, Juan R and Guti{\'e}rrez, Ver{\'o}nica and S{\'a}nchez, Luis and Sotres, Pablo and Mu{\~n}oz, Luis},
-  booktitle={Wireless On-demand Network Systems and Services (WONS), 2012 9th Annual Conference on},
-  pages={175--181},
-  year={2012},
-  organization={IEEE}
+@INPROCEEDINGS{galache_2012,
+  AUTHOR = {Galache, Jose A and Santana, Juan R and Gutiérrez, Verónica and Sánchez, Luis and Sotres, Pablo and Muñoz, Luis},
+  ORGANIZATION = {IEEE},
+  BOOKTITLE = {Wireless On-demand Network Systems and Services (WONS), 2012 9th Annual Conference on},
+  DATE = {2012},
+  PAGES = {175--181},
+  TITLE = {Towards experimentation-service duality within a smart city scenario},
 }
 
-@inproceedings{nati_2013,
-  title={Smartcampus: A user-centric testbed for internet of things experimentation},
-  author={Nati, Michele and Gluhak, Alexander and Abangar, Hamidreza and Headley, William},
-  booktitle={Wireless Personal Multimedia Communications (WPMC), 2013 16th International Symposium on},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
+@INPROCEEDINGS{nati_2013,
+  AUTHOR = {Nati, Michele and Gluhak, Alexander and Abangar, Hamidreza and Headley, William},
+  ORGANIZATION = {IEEE},
+  BOOKTITLE = {Wireless Personal Multimedia Communications (WPMC), 2013 16th International Symposium on},
+  DATE = {2013},
+  PAGES = {1--6},
+  TITLE = {Smartcampus: A user-centric testbed for internet of things experimentation},
 }
 
-@inproceedings{olivares_2013,
-  title={An experimental testbed for smart cities applications},
-  author={Olivares, Teresa and Royo, Fernando and Ortiz, Antonio M},
-  booktitle={Proceedings of the 11th ACM international symposium on Mobility management and wireless access},
-  pages={115--118},
-  year={2013},
-  organization={ACM}
+@INPROCEEDINGS{olivares_2013,
+  AUTHOR = {Olivares, Teresa and Royo, Fernando and Ortiz, Antonio M},
+  ORGANIZATION = {ACM},
+  BOOKTITLE = {Proceedings of the 11th ACM international symposium on Mobility management and wireless access},
+  DATE = {2013},
+  PAGES = {115--118},
+  TITLE = {An experimental testbed for smart cities applications},
 }
 
-@inproceedings{mwangama_2013,
-  title={Testbeds for reliable smart city machine-to-machine communication},
-  author={Mwangama, Joyce and Willner, Alexander and Ventura, Neco and Elmangoush, Asma and Pfeifer, Tom and Magedanz, Thomas},
-  booktitle={Southern African Telecommunication Networks and Applications Conference (SATNAC)},
-  pages={339},
-  year={2013}
+@INPROCEEDINGS{mwangama_2013,
+  AUTHOR = {Mwangama, Joyce and Willner, Alexander and Ventura, Neco and Elmangoush, Asma and Pfeifer, Tom and Magedanz, Thomas},
+  BOOKTITLE = {Southern African Telecommunication Networks and Applications Conference (SATNAC)},
+  DATE = {2013},
+  PAGES = {339},
+  TITLE = {Testbeds for reliable smart city machine-to-machine communication},
 }
 
-@inproceedings{adjih_2015,
-  title={FIT IoT-LAB: A large scale open experimental IoT testbed},
-  author={Adjih, Cedric and Baccelli, Emmanuel and Fleury, Eric and Harter, Gaetan and Mitton, Nathalie and Noel, Thomas and Pissard-Gibollet, Roger and Saint-Marcel, Frederic and Schreiner, Guillaume and Vandaele, Julien and others},
-  booktitle={Internet of Things (WF-IoT), 2015 IEEE 2nd World Forum on},
-  pages={459--464},
-  year={2015},
-  organization={IEEE}
+@INPROCEEDINGS{adjih_2015,
+  AUTHOR = {Adjih, Cedric and Baccelli, Emmanuel and Fleury, Eric and Harter, Gaetan and Mitton, Nathalie and Noel, Thomas and Pissard-Gibollet, Roger and Saint-Marcel, Frederic and Schreiner, Guillaume and Vandaele, Julien and others},
+  ORGANIZATION = {IEEE},
+  BOOKTITLE = {Internet of Things (WF-IoT), 2015 IEEE 2nd World Forum on},
+  DATE = {2015},
+  PAGES = {459--464},
+  TITLE = {FIT IoT-LAB: A large scale open experimental IoT testbed},
 }
 
-@inproceedings{shukla_2016,
-  title={Benchmarking distributed stream processing platforms for iot applications},
-  author={Shukla, Anshu and Simmhan, Yogesh},
-  booktitle={Technology Conference on Performance Evaluation and Benchmarking},
-  pages={90--106},
-  year={2016},
-  organization={Springer}
+@INPROCEEDINGS{shukla_2016,
+  AUTHOR = {Shukla, Anshu and Simmhan, Yogesh},
+  ORGANIZATION = {Springer},
+  BOOKTITLE = {Technology Conference on Performance Evaluation and Benchmarking},
+  DATE = {2016},
+  PAGES = {90--106},
+  TITLE = {Benchmarking distributed stream processing platforms for iot applications},
 }
 
 @article{shukla_2017,
-  title={RIoTBench: A Real-time IoT Benchmark for Distributed Stream Processing Platforms},
-  author={Shukla, Anshu and Chaturvedi, Shilpa and Simmhan, Yogesh},
-  journal={arXiv preprint arXiv:1701.08530},
-  year={2017}
+  author    = {Anshu Shukla and
+               Shilpa Chaturvedi and
+               Yogesh Simmhan},
+  title     = {RIoTBench: {A} Real-time IoT Benchmark for Distributed Stream Processing
+               Platforms},
+  journal   = {CoRR},
+  volume    = {abs/1701.08530},
+  year      = {2017},
+  url       = {http://arxiv.org/abs/1701.08530},
+  archivePrefix = {arXiv},
+  eprint    = {1701.08530},
+  timestamp = {Wed, 07 Jun 2017 14:41:54 +0200},
+  biburl    = {http://dblp.org/rec/bib/journals/corr/ShuklaCS17},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
-@conference{zyrianoff_2017,
-  title={SenSE--Sensor Simulation Environment: Uma ferramenta para gera{\c{c}}{\~a}o de tr{\'a}fego IoT em larga escala},
-  author={Zyrianoff, Ivan and Borelli, Fabrizio and Kamienski, Carlos},
-  booktitle={35th Simposio Brasileiro de Redes de Computadores e Sistemas Distribuidos},
-  year={2017}
+@INPROCEEDINGS{zyrianoff_2017,
+  AUTHOR = {Zyrianoff, Ivan and Borelli, Fabrizio and Kamienski, Carlos},
+  BOOKTITLE = {35th Simpósio Brasileiro de Redes de Computadores e Sistemas Distribuídos},
+  DATE = {2017},
+  TITLE = {SenSE--Sensor Simulation Environment: Uma ferramenta para geração de tráfego IoT em larga escala},
 }
 
-@inproceedings{karnouskos_2009,
-  title={Simulation of a smart grid city with software agents},
-  author={Karnouskos, Stamatis and De Holanda, Thiago Nass},
-  booktitle={Computer Modeling and Simulation, 2009. EMS'09. Third UKSim European Symposium on},
-  pages={424--429},
-  year={2009},
-  organization={IEEE}
+@INPROCEEDINGS{karnouskos_2009,
+  AUTHOR = {Karnouskos, Stamatis and De Holanda, Thiago Nass},
+  ORGANIZATION = {IEEE},
+  BOOKTITLE = {Computer Modeling and Simulation, 2009. EMS'09. Third UKSim European Symposium on},
+  DATE = {2009},
+  PAGES = {424--429},
+  TITLE = {Simulation of a smart grid city with software agents},
 }
 
 @article{kim_2009,
@@ -342,22 +317,22 @@ publisher={Elsevier Brasil}
   publisher={Elsevier}
 }
 
-@inproceedings{saha_2004,
-  title={Modeling mobility for vehicular ad-hoc networks},
-  author={Saha, Amit Kumar and Johnson, David B},
-  booktitle={Proceedings of the 1st ACM international workshop on Vehicular ad hoc networks},
-  pages={91--92},
-  year={2004},
-  organization={ACM}
+@INPROCEEDINGS{saha_2004,
+  AUTHOR = {Saha, Amit Kumar and Johnson, David B},
+  ORGANIZATION = {ACM},
+  BOOKTITLE = {Proceedings of the 1st ACM international workshop on Vehicular ad hoc networks},
+  DATE = {2004},
+  PAGES = {91--92},
+  TITLE = {Modeling mobility for vehicular ad-hoc networks},
 }
 
-@inproceedings{barba_2012,
-  title={Smart city for VANETs using warning messages, traffic statistics and intelligent traffic lights},
-  author={Barba, Carolina Tripp and Mateos, Miguel Angel and Soto, Pablo Reganas and Mezher, Ahmad Mohamad and Igartua, M{\'o}nica Aguilar},
-  booktitle={Intelligent Vehicles Symposium (IV), 2012 IEEE},
-  pages={902--907},
-  year={2012},
-  organization={IEEE}
+@INPROCEEDINGS{barba_2012,
+  AUTHOR = {Barba, Carolina Tripp and Mateos, Miguel Angel and Soto, Pablo Reganas and Mezher, Ahmad Mohamad and Igartua, Mónica Aguilar},
+  ORGANIZATION = {IEEE},
+  BOOKTITLE = {Intelligent Vehicles Symposium (IV), 2012 IEEE},
+  DATE = {2012},
+  PAGES = {902--907},
+  TITLE = {Smart city for VANETs using warning messages, traffic statistics and intelligent traffic lights},
 }
 
 @article{waraich_2013,
@@ -370,13 +345,14 @@ publisher={Elsevier Brasil}
   publisher={Elsevier}
 }
 
-@inproceedings{wegener_2008,
-  title={TraCI: an interface for coupling road traffic and network simulators},
-  author={Wegener, Axel and Pi{\'o}rkowski, Micha{\l} and Raya, Maxim and Hellbr{\"u}ck, Horst and Fischer, Stefan and Hubaux, Jean-Pierre},
-  booktitle={Proceedings of the 11th communications and networking simulation symposium},
-  pages={155--163},
-  year={2008},
-  organization={ACM}
+
+@INPROCEEDINGS{wegener_2008,
+  AUTHOR = {Wegener, Axel and Pi\'{o}rkowski, Micha{\l{}} and Raya, Maxim and Hellbr\"{u}ck, Horst and Fischer, Stefan and Hubaux, Jean-Pierre},
+  ORGANIZATION = {ACM},
+  BOOKTITLE = {Proceedings of the 11th communications and networking simulation symposium},
+  DATE = {2008},
+  PAGES = {155--163},
+  TITLE = {TraCI: an interface for coupling road traffic and network simulators},
 }
 
 @article{kim_2012,
