--- a/quali.tex
+++ b/quali.tex
@@ -192,7 +192,7 @@
     %\normalsize{This research is supported by CNPq, Brazil}
     
     \vskip 0.5cm
-    \normalsize{São Paulo, Novembro de 2017}
+    \normalsize{São Paulo, Dezembro de 2017}
 \end{center}
 
 % ---------------------------------------------------------------------------- %
