--- a/quali.tex
+++ b/quali.tex
@@ -315,8 +315,8 @@
 
 % ---------------------------------------------------------------------------- %
 % Listas de figuras e tabelas criadas automaticamente
-%\listoffigures            
-%\listoftables            
+\listoffigures            
+\listoftables            
 
 % ---------------------------------------------------------------------------- %
 % Capítulos do trabalho
