--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,10 +1,10 @@
-@INPROCEEDINGS{chourabi_2012,
+@conference{chourabi_2012,
   AUTHOR = {Chourabi, Hafedh and Nam, Taewoo and Walker, Shawn and Gil-Garcia, J. Ramon and Mellouli, Sehl and Nahon, Karine and Pardo, Theresa A. and Scholl, Hans Jochen},
   LOCATION = {Washington, DC, USA},
   PUBLISHER = {IEEE Computer Society},
   URL = {http://dx.doi.org/10.1109/HICSS.2012.615},
   BOOKTITLE = {Proceedings of the 2012 45th Hawaii International Conference on System Sciences},
-  DATE = {2012},
+  YEAR = {2012},
   DOI = {10.1109/HICSS.2012.615},
   ISBN = {978-0-7695-4525-7},
   PAGES = {2289--2297},
@@ -40,26 +40,26 @@ year={2017}
   publisher={Elsevier}
 }
 
-@INPROCEEDINGS{wasserman_1990,
+@conference{wasserman_1990,
   AUTHOR = {Wasserman, Anthony I},
   ORGANIZATION = {Springer},
   BOOKTITLE = {Software Engineering Environments},
-  DATE = {1990},
+  YEAR = {1990},
   PAGES = {137--149},
   TITLE = {Tool integration in software engineering environments},
 }
 
-@INPROCEEDINGS{arthur_17,
+@conference{arthur_17,
   AUTHOR = {de M. Del Esposte, Arthur and Kon, Fabio and Costa, Fabio M. and Lago, Nelson},
   BOOKTITLE = {Proceedings of the 6th International Conference on Smart Cities and Green ICT Systems},
-  DATE = {2017},
+  YEAR = {2017},
   TITLE = {InterSCity: A Scalable Microservice-based Open Source Platform for Smart Cities},
 }
 
-@INPROCEEDINGS{santana_17,
+@conference{santana_17,
   AUTHOR = {Santana, Eduardo F. Z. and Lago, Nelson and Kon, Fabio and Milojicic, Dejan S.},
   BOOKTITLE = {Proceedings of the 18th Workshop on Multi-agent-based Simulation},
-  DATE = {2017},
+  YEAR = {2017},
   TITLE = {InterSCSimulator: Large-Scale Traffic Simulation in Smart Cities using Erlang},
 }
 
@@ -120,15 +120,15 @@ year={2017}
 @BOOK{teste_de_software,
   AUTHOR = {Do, Simone and Souza, Simone and Maldonado, Jose and Camargo Pinto, Sandra and Fabbri, Ferraz and Auri, Marcelo and Vincenzi, Auri and Barbosa, Ellen and Delamaro, Marcio and Jino, Mario},
   PUBLISHER = {Elsevier Brasil},
-  DATE = {2000-11},
+  YEAR = {2000-11},
   TITLE = {Introdução ao Teste de Software},
 }
 
-@INCOLLECTION{fagan_2002,
+@conference{fagan_2002,
   AUTHOR = {Fagan, Michael},
   PUBLISHER = {Springer},
   BOOKTITLE = {Software pioneers},
-  DATE = {2002},
+  YEAR = {2002},
   PAGES = {575--607},
   TITLE = {Design and code inspections to reduce errors in program development},
 }
@@ -137,7 +137,7 @@ year={2017}
   AUTHOR = {Pressman, R.S.},
   PUBLISHER = {McGraw Hill Brasil},
   URL = {https://books.google.com.br/books?id=y0rH9wuXe68C},
-  DATE = {2009},
+  YEAR = {2009},
   ISBN = {9788580550443},
   TITLE = {Engenharia de Software - 7.ed.:},
 }
@@ -146,7 +146,7 @@ year={2017}
   AUTHOR = {Sommerville, I.},
   PUBLISHER = {Pearson Brasil},
   URL = {https://books.google.com.br/books?id=H4u5ygAACAAJ},
-  DATE = {2011},
+  YEAR = {2011},
   ISBN = {9788579361081},
   TITLE = {Engenharia de software},
 }
@@ -180,7 +180,7 @@ year={2017}
 @BOOK{nielsen_1994,
   AUTHOR = {Nielsen, Jakob},
   PUBLISHER = {Elsevier},
-  DATE = {1994},
+  YEAR = {1994},
   TITLE = {Usability engineering},
 }
 
@@ -198,7 +198,7 @@ year={2017}
 @BOOK{shneidermaan_2016,
   AUTHOR = {Shneiderman, Ben and Plaisant, Catherine and Cohen, Maxine S and Jacobs, Steven and Elmqvist, Niklas and Diakopoulos, Nicholas},
   PUBLISHER = {Pearson},
-  DATE = {2016},
+  YEAR = {2016},
   TITLE = {Designing the user interface: strategies for effective human-computer interaction},
 }
 
@@ -220,55 +220,55 @@ year={2017}
   publisher={IEEE}
 }
 
-@INPROCEEDINGS{galache_2012,
+@conference{galache_2012,
   AUTHOR = {Galache, Jose A and Santana, Juan R and Gutiérrez, Verónica and Sánchez, Luis and Sotres, Pablo and Muñoz, Luis},
   ORGANIZATION = {IEEE},
   BOOKTITLE = {Wireless On-demand Network Systems and Services (WONS), 2012 9th Annual Conference on},
-  DATE = {2012},
+  YEAR = {2012},
   PAGES = {175--181},
   TITLE = {Towards experimentation-service duality within a smart city scenario},
 }
 
-@INPROCEEDINGS{nati_2013,
+@conference{nati_2013,
   AUTHOR = {Nati, Michele and Gluhak, Alexander and Abangar, Hamidreza and Headley, William},
   ORGANIZATION = {IEEE},
   BOOKTITLE = {Wireless Personal Multimedia Communications (WPMC), 2013 16th International Symposium on},
-  DATE = {2013},
+  YEAR = {2013},
   PAGES = {1--6},
   TITLE = {Smartcampus: A user-centric testbed for internet of things experimentation},
 }
 
-@INPROCEEDINGS{olivares_2013,
+@conference{olivares_2013,
   AUTHOR = {Olivares, Teresa and Royo, Fernando and Ortiz, Antonio M},
   ORGANIZATION = {ACM},
   BOOKTITLE = {Proceedings of the 11th ACM international symposium on Mobility management and wireless access},
-  DATE = {2013},
+  YEAR = {2013},
   PAGES = {115--118},
   TITLE = {An experimental testbed for smart cities applications},
 }
 
-@INPROCEEDINGS{mwangama_2013,
+@conference{mwangama_2013,
   AUTHOR = {Mwangama, Joyce and Willner, Alexander and Ventura, Neco and Elmangoush, Asma and Pfeifer, Tom and Magedanz, Thomas},
   BOOKTITLE = {Southern African Telecommunication Networks and Applications Conference (SATNAC)},
-  DATE = {2013},
+  YEAR = {2013},
   PAGES = {339},
   TITLE = {Testbeds for reliable smart city machine-to-machine communication},
 }
 
-@INPROCEEDINGS{adjih_2015,
+@conference{adjih_2015,
   AUTHOR = {Adjih, Cedric and Baccelli, Emmanuel and Fleury, Eric and Harter, Gaetan and Mitton, Nathalie and Noel, Thomas and Pissard-Gibollet, Roger and Saint-Marcel, Frederic and Schreiner, Guillaume and Vandaele, Julien and others},
   ORGANIZATION = {IEEE},
   BOOKTITLE = {Internet of Things (WF-IoT), 2015 IEEE 2nd World Forum on},
-  DATE = {2015},
+  YEAR = {2015},
   PAGES = {459--464},
   TITLE = {FIT IoT-LAB: A large scale open experimental IoT testbed},
 }
 
-@INPROCEEDINGS{shukla_2016,
+@conference{shukla_2016,
   AUTHOR = {Shukla, Anshu and Simmhan, Yogesh},
   ORGANIZATION = {Springer},
   BOOKTITLE = {Technology Conference on Performance Evaluation and Benchmarking},
-  DATE = {2016},
+  YEAR = {2016},
   PAGES = {90--106},
   TITLE = {Benchmarking distributed stream processing platforms for iot applications},
 }
@@ -290,18 +290,18 @@ year={2017}
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
-@INPROCEEDINGS{zyrianoff_2017,
+@conference{zyrianoff_2017,
   AUTHOR = {Zyrianoff, Ivan and Borelli, Fabrizio and Kamienski, Carlos},
   BOOKTITLE = {35th Simpósio Brasileiro de Redes de Computadores e Sistemas Distribuídos},
-  DATE = {2017},
+  YEAR = {2017},
   TITLE = {SenSE--Sensor Simulation Environment: Uma ferramenta para geração de tráfego IoT em larga escala},
 }
 
-@INPROCEEDINGS{karnouskos_2009,
+@conference{karnouskos_2009,
   AUTHOR = {Karnouskos, Stamatis and De Holanda, Thiago Nass},
   ORGANIZATION = {IEEE},
   BOOKTITLE = {Computer Modeling and Simulation, 2009. EMS'09. Third UKSim European Symposium on},
-  DATE = {2009},
+  YEAR = {2009},
   PAGES = {424--429},
   TITLE = {Simulation of a smart grid city with software agents},
 }
@@ -317,20 +317,20 @@ year={2017}
   publisher={Elsevier}
 }
 
-@INPROCEEDINGS{saha_2004,
+@conference{saha_2004,
   AUTHOR = {Saha, Amit Kumar and Johnson, David B},
   ORGANIZATION = {ACM},
   BOOKTITLE = {Proceedings of the 1st ACM international workshop on Vehicular ad hoc networks},
-  DATE = {2004},
+  YEAR = {2004},
   PAGES = {91--92},
   TITLE = {Modeling mobility for vehicular ad-hoc networks},
 }
 
-@INPROCEEDINGS{barba_2012,
+@conference{barba_2012,
   AUTHOR = {Barba, Carolina Tripp and Mateos, Miguel Angel and Soto, Pablo Reganas and Mezher, Ahmad Mohamad and Igartua, Mónica Aguilar},
   ORGANIZATION = {IEEE},
   BOOKTITLE = {Intelligent Vehicles Symposium (IV), 2012 IEEE},
-  DATE = {2012},
+  YEAR = {2012},
   PAGES = {902--907},
   TITLE = {Smart city for VANETs using warning messages, traffic statistics and intelligent traffic lights},
 }
@@ -346,11 +346,11 @@ year={2017}
 }
 
 
-@INPROCEEDINGS{wegener_2008,
+@conference{wegener_2008,
   AUTHOR = {Wegener, Axel and Pi\'{o}rkowski, Micha{\l{}} and Raya, Maxim and Hellbr\"{u}ck, Horst and Fischer, Stefan and Hubaux, Jean-Pierre},
   ORGANIZATION = {ACM},
   BOOKTITLE = {Proceedings of the 11th communications and networking simulation symposium},
-  DATE = {2008},
+  YEAR = {2008},
   PAGES = {155--163},
   TITLE = {TraCI: an interface for coupling road traffic and network simulators},
 }
